--- a/css/theme/simple.css
+++ b/css/theme/simple.css
@@ -13,15 +13,25 @@
 body {
   background: white;
   letter-spacing: 10px;
-  background-color: white; 
+  background-color: black; 
   }
+.stretch { min-width:95%; min-height:95%; width:auto; height:auto; }
 
+.zoom {
+  -webkit-transform: scale(1.5); /* Safari and Chrome */ 
+  transform: scale(1.5); /* zoom factor - prefix if needed */
+  position:relative;
+  width: 1000px; /* half of iframe width */
+  height: 500px; /* half of iframe height */
+  margin: 10px 0 0 10px; /* reposition iframe */
+  overflow: hidden; /* remove big-ass scrollbars */
+}
 .reveal {
   font-family: "Lato", sans-serif;
   font-size: 36px;
   font-weight: normal;
   letter-spacing: -0.02em;
-  color: black; }
+  color: white; }
 
 ::selection {
   color: white;
@@ -31,6 +41,14 @@ body {
 /*********************************************
  * HEADERS
  *********************************************/
+.centered {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  /* bring your own prefixes */
+  transform: translate(-50%, -50%);
+}
+
 .reveal h1,
 .reveal h2,
 .reveal h3,
@@ -38,7 +56,10 @@ body {
 .reveal h5,
 .reveal h6 {
   margin: 0 0 20px 0;
-  color: black;
+  color: white;
+  position: fixed;
+  bottom : 125%;
+  left : 38%;
   font-family: "News Cycle", Impact, sans-serif;
   line-height: 0.9em;
   letter-spacing: 0.02em;
@@ -73,10 +94,10 @@ body {
  * IMAGES
  *********************************************/
 .reveal section img {
-  margin: 15px 0px;
+  margin: 0px 0px;
   background: rgba(255, 255, 255, 0.12);
   border: 4px solid black;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0 0px rgba(0, 0, 0, 0.15);
   -webkit-transition: all .2s linear;
   -moz-transition: all .2s linear;
   -ms-transition: all .2s linear;
